# AIAdPlacer

./: .env.example  .gitignore  AIAdPlacer-API-Guide.md  AIAdPlacer-MCP-Test-Report.md  ARCHITECTURE.md  MCP  QUICKSTART.md  README.md  README_BMN.md  attribution-report.md  business-proposal-cps2.html  cps2-demo.html  demo.html  docker-compose.yml  github_upload_guide.md  pdoh_standard_raw.txt  pdoh_whitepaper_v2.md  plan.md  push_helper.py  qinglin-demo.html  亲邻单元门智能框架.db  亲邻单元门智能框架_清洗.csv  亲邻商场LED.db  亲邻广州道闸.db  商场LED_清洗.csv  城市资源索引.csv  广州道闸广告点位_清洗.csv  梯影全国_清洗.csv  电梯框架全国_清洗.csv
AIAdPlacer A2A/: MCP 调用指南
backend/: .env.example  Dockerfile  README.md  bmn_app.py  bus-demo.html  competitor_agent.py  create_sample_db.py  demo_three_shrimps.py  demo_three_shrimps_v2.py  docker-compose.yml  install.bat  knowledge-demo.html  optimization-demo.html  requirements.txt  run.py  run_all_agents.py  run_roi_agent.py  seed_demo_data.py  start_all.bat  test_bmn_endpoints.py  test_bmn_import.py  test_bmn_startup.py  test_installation.py  test_llm_demo.py
bmn-frontend/: create_bmn_vue.py  demo.html  index.html  package.json  vite.config.js
docs/: AIAdPlacer-Product-Specification-v2.md  (+34 more)
pdooh_client/: LICENSE  MANIFEST.in  PYPI_UPLOAD_GUIDE.md  README.md  TEST-REPORT.md  __init__.py  competitor_agent_client.py  config.py  exceptions.py  mcp_client.py  pyproject.toml  roi_agent_client.py  setup.py  tom_agent_client.py  upload_pypi.bat  upload_to_pypi.bat  utils.py
pdooh_client/tests/: __init__.py  test_competitor_agent.py  test_mcp_client.py  test_roi_agent.py  test_tom_agent.py
(+77 files in other folders)
