[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdooh-client"
version = "1.0.0"
description = "Python 客户端库，用于调用 pDOOH API（MCP Server、Tom Agent、ROI Agent、竞品 Agent）"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tom (Qi)", email = "tom@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/tomwugdgz/AIAdPlacer"
Repository = "https://github.com/tomwugdgz/AIAdPlacer"
Documentation = "https://github.com/tomwugdgz/AIAdPlacer/blob/main/pdooh_client/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdooh_client*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
